--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,68 @@
 <resources>
-    <string name="app_name">Final Project</string>
-    <string name="record">Record</string>
-    <string name="being_record">Being Record</string>
-    <string name="enter_item">Enter Item</string>
-    <string name="add">add</string>
-    <string name="textview">TextView</string>
+    <string name="app_name">Campus Snake 125</string>
+    <string name="service_name">Campus Snake 125 Location Observer</string>
+    <string name="notification_text">Tracking location because you\'re in a game</string>
+    <string name="create_game">Create Game</string>
+    <string name="nameOfExpense">nameOfExpense</string>
+    <string name="amount">amount</string>
+    <string name="remove">Remove</string>
+    <string name="add" />
+    <string name="enter_item" />
+    <string-array name="day_choice">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+
+
+    </string-array>
+    <string-array name="month_choice">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </string-array>
+    <string-array name="category_choice">
+        <item>Food</item>
+        <item>Transportation</item>
+        <item>Drink</item>
+        <item>Electronics</item>
+        <item>Entertainment</item>
+        <item>Others</item>
+    </string-array>
 </resources>
